refactor: 인코딩 명시